--- a/templates/update_durations.html
+++ b/templates/update_durations.html
@@ -1,7 +1,7 @@
 {% extends 'app.html' %}
 {% block content %}
 
-  <h1>Update amounts</h1>
+  <h1>Update durations</h1>
   {% include '_fund_request_table.html' %}
 
 {% endblock %}
