Simple admin functionality

--- a/templates/app.html
+++ b/templates/app.html
@@ -5,6 +5,7 @@
     <title>Beehive Insight</title>
   </head>
   <body>
+    <a href="/">Home</a>
     {% block content %}{% endblock %}
   </body>
 </html>
