--- a/templates/amounts/index.html
+++ b/templates/amounts/index.html
@@ -1,6 +1,8 @@
 {% extends 'app.html' %}
 {% block content %}
 
+  <a href="/new-amount">/new-amount</a>
+
   <h1>Update amounts</h1>
   {% include '_fund_request_table.html' %}
 
