--- a/templates/app.html
+++ b/templates/app.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <a href="/">Home</a>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
     {% block content %}{% endblock %}
   </body>
 </html>
