--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
 
 <h2>Amounts</h2>
 <ul>
+  <li><a href="/new-amount">/new-amount</a></li>
   <li><a href="/update-amounts">/update-amounts</a></li>
 </ul>
 
